--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <h2>Synthesizer란?</h2>
 
+
+
 <p>A <a href="https://en.wikipedia.org/wiki/Synthesizer" target="_blank" title="Synthesiser wikipedia"><strong><u>synthesizer</u></strong></a> (also spelled synthesiser) is an <strong>electronic musical instrument</strong> that generates audio signals. Synthesizers typically create sounds by generating waveforms, through methods including subtractive synthesis, additive synthesis and frequency modulation synthesis. These sounds may be altered by components such as filters, which cut or boost frequencies; envelopes, which control articulation, or how notes begin and end; and low-frequency oscillators, which modulate parameters such as pitch, volume, or filter characteristics affecting timbre. Synthesizers are typically played with keyboards or controlled by sequencers, software or other instruments, and may be synchronized to other equipment via MIDI.</p>
 
 <p style= "margin-top:8px;">
@@ -24,6 +26,26 @@ Synthesizer-like instruments emerged in the United States in the mid-20th centur
 <img src="synthes.jpg" width="50%">
 <p>Synthesizers were initially viewed as avant-garde, valued by the 1960s psychedelic and counter-cultural scenes but with little perceived commercial potential. Switched-On Bach (1968), a bestselling album of Bach compositions arranged for synthesizer by Wendy Carlos, took synthesizers to the mainstream. They were adopted by electronic acts and pop and rock groups in the 1960s and 1970s, and widely used in 1980s rock. Sampling, introduced with the Fairlight synthesizer in 1979, has influenced all genres of music and had a major influence on the development of electronic and hip hop music. Today, the synthesizer is used in nearly every genre of music, and is considered one of the most important instruments in the music industry. According to Fact in 2016, "The synthesizer is as important, and as ubiquitous, in modern music today as the human voice."</p>
 <p>
-I love you Anna💗
-  </p>
-  </body>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Ig6vIRmfoNI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
+
+
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web2-1tuobvz8vp.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
