댓글기능 추가함

--- a/index.html
+++ b/index.html
@@ -49,3 +49,4 @@ Synthesizer-like instruments emerged in the United States in the mid-20th centur
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</body>
