--- a/2.html
+++ b/2.html
@@ -26,3 +26,24 @@ FM synthesis using analog oscillators may result in pitch instability. However, 
 FM synthesis had also become the usual setting for games and software until the mid-nineties. Through sound cards like the AdLib and Sound Blaster, IBM PCs popularized Yamaha chips like OPL2 and OPL3. OPNB was used as main basic sound generator board in SNK Neo Geo operated arcades (MVS) and home console (AES). Later variant in use for Taito Z System. The related OPN2 was used in the Fujitsu FM Towns Marty and Sega Genesis as one of its sound generator chips. Similarly, Sharp X68000 and MSX (Yamaha computer unit) also use FM-based soundchip, OPM.
 </p>
 </body>
+
+
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web2-1tuobvz8vp.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
