--- a/3.html
+++ b/3.html
@@ -23,7 +23,7 @@
 <p>
 It was also independently developed in a similar time frame by Michael McNabb, who used it in his 1978 composition Dreamsong.
 </p>
-<p></body>
+<p>
 
 
   <div id="disqus_thread"></div>
@@ -45,3 +45,4 @@ It was also independently developed in a similar time frame by Michael McNabb, w
       })();
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </body>
