--- a/3.html
+++ b/3.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V99Z2EP2WK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V99Z2EP2WK');
+</script>
 <title>Synthesizer</title>
 <meta charset="utf-8">
 </head>
@@ -43,4 +52,8 @@ It was also independently developed in a similar time frame by Michael McNabb, w
       })();
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-  </body>
+
+<p>
+
+</p>
+</body>
